[gd_scene load_steps=28 format=2]

[ext_resource path="res://characters/bosses/dredge_man/dredge_man.gd" type="Script" id=1]
[ext_resource path="res://characters/bosses/dredge_man/sprites/dredge_man.png" type="Texture" id=2]
[ext_resource path="res://characters/bosses/dredge_man/sprites/dredge_toss.png" type="Texture" id=3]
[ext_resource path="res://characters/player/sprites/mega_man/Hit.png" type="Texture" id=4]
[ext_resource path="res://characters/enemies/base/sounds/Hit.wav" type="AudioStream" id=5]
[ext_resource path="res://characters/player/sounds/Died.wav" type="AudioStream" id=6]
[ext_resource path="res://characters/bosses/dredge_man/scripts/dredge_state_machine.gd" type="Script" id=7]
[ext_resource path="res://characters/bosses/dredge_man/states/await.gd" type="Script" id=8]
[ext_resource path="res://characters/bosses/dredge_man/states/death.gd" type="Script" id=9]
[ext_resource path="res://characters/bosses/dredge_man/states/ready.gd" type="Script" id=10]
[ext_resource path="res://effects/effect_spawner/EffectSpawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://characters/bosses/dredge_man/states/idle.gd" type="Script" id=12]
[ext_resource path="res://characters/bosses/dredge_man/states/jump.gd" type="Script" id=13]
[ext_resource path="res://characters/bosses/dredge_man/states/dig.gd" type="Script" id=15]
[ext_resource path="res://characters/bosses/dredge_man/states/shoot.gd" type="Script" id=17]
[ext_resource path="res://characters/bosses/dredge_man/states/bomb.gd" type="Script" id=18]
[ext_resource path="res://characters/bosses/dredge_man/sprites/dredge_introanim.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18.5, 21.75 )

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 22, 25.5 )

[sub_resource type="Animation" id=43]
resource_name = "bomb"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprites/Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterSprites/DredgeToss:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharacterSprites/DredgeToss:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CharacterSprites/Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=42]
resource_name = "dig"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
length = 3.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprites/IntroSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.6, 1.9, 2.1, 2.4, 2.55, 2.8, 2.95, 3.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17, 19 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CharacterSprites/IntroSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.6, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -256 ), Vector2( 0, -225 ), Vector2( 0, -140 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharacterSprites/RopeSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 3, 2, 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CharacterSprites/RopeSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, -190 ), Vector2( -10, -130 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CharacterSprites/RopeSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CharacterSprites/IntroSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=39]
resource_name = "idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=41]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 11 ]
}

[sub_resource type="Animation" id=40]
resource_name = "shoot"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("CharacterSprites/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.5, 0.6, 0.7, 1, 1.1, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15, 16, 14, 15, 16, 14, 15 ]
}

[sub_resource type="Animation" id=4]
length = 0.55
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteEffect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.48 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteEffect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CharacterSprites:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=6]
length = 0.16
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("DashEffect:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DashEffect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.16 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="dredgeMan" type="KinematicBody2D"]
z_index = 1
collision_layer = 4
script = ExtResource( 1 )
buster_damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 8.25 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 7 )
shape = SubResource( 1 )

[node name="CharacterSprites" type="Node2D" parent="."]

[node name="RopeSprite" type="Sprite" parent="CharacterSprites"]
visible = false
position = Vector2( -10, -130 )
texture = ExtResource( 19 )
flip_h = true
hframes = 10
vframes = 2
frame = 1

[node name="IntroSprite" type="Sprite" parent="CharacterSprites"]
visible = false
texture = ExtResource( 19 )
offset = Vector2( 6, -2 )
flip_h = true
hframes = 10
vframes = 2
frame = 15

[node name="Sprite" type="Sprite" parent="CharacterSprites"]
visible = false
texture = ExtResource( 2 )
flip_h = true
hframes = 7
vframes = 4
region_enabled = true
region_rect = Rect2( 0.5, 24.5, 371, 252 )
region_filter_clip = true

[node name="DredgeToss" type="Sprite" parent="CharacterSprites"]
visible = false
texture = ExtResource( 3 )
hframes = 3
frame = 2

[node name="HitSprite" type="Sprite" parent="CharacterSprites"]
visible = false
texture = ExtResource( 2 )
hframes = 7
vframes = 4
frame = 9
region_enabled = true
region_rect = Rect2( 0.5, 24.5, 371, 252 )
region_filter_clip = true

[node name="SpriteEffect" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )

[node name="AnimationBase" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/bomb = SubResource( 43 )
anims/dig = SubResource( 42 )
anims/drop_in = SubResource( 3 )
anims/idle = SubResource( 39 )
anims/jump = SubResource( 41 )
anims/shoot = SubResource( 40 )

[node name="AnimationHit" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 4 )

[node name="AnimationEffects" type="AnimationPlayer" parent="."]
anims/dash_effect = SubResource( 6 )

[node name="SFX" type="Node" parent="."]

[node name="Hit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 5 )

[node name="Death" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )
start_state = NodePath("Await")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Ready" type="Node" parent="StateMachine"]
pause_mode = 2
script = ExtResource( 10 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Await" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 13 )
jump_speed = -380

[node name="Dig" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="Shoot" type="Node" parent="StateMachine"]
script = ExtResource( 17 )

[node name="Bomb" type="Node" parent="StateMachine"]
script = ExtResource( 18 )

[node name="EffectSpawner" parent="." instance=ExtResource( 11 )]

[node name="TimerShoot" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerIdleDelay" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="TimerDigSpeed" type="Timer" parent="."]
process_mode = 0
wait_time = 1.5

[node name="TimerCooldown" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0
one_shot = true

[node name="TimerDrop" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, 22 )
cast_to = Vector2( 70, 0 )
collision_mask = 2

[node name="PositionDig" type="Position2D" parent="."]
position = Vector2( 18, 25 )

[node name="PositionShoot" type="Position2D" parent="."]
position = Vector2( 18, 5 )

[connection signal="animation_finished" from="AnimationHit" to="StateMachine" method="_on_animation_finished"]
